<resources>
    <string name="app_name">AUTODROID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AUTODROID</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="userimage">UserImage</string>
    <string name="login">Login</string>
    <string name="home_activity">Home Activity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="create_your_account_or_log_in">Create your account or Log in</string>
    <string name="enter_username">Enter Username</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="google_logo">google logo</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_with_google">Log in with Google</string>

    <string name= "drive_upload_feature">Enabling this feature allow the app to automaticaly upload previous date photos from gallery to Google Drive Folder My_Photos_Folder everyday. </string>


    <string name="save_button">Save</string>
    <string name="prompt_occasion">Select Occasion</string>
    <string name="enter_10_digit_mobile_no">Enter 10 digit mobile No</string>
    <string name="title_activity_timer">TimerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sms_wisher">Auto SMS Wisher</string>
    <string name="select_date_to_send_message">Select date to send message</string>
    <string name="please_type_your_message">Please type your message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_sms_wisher">Auto SMS Wisher</string>
    <string name="auto_app_timer">Auto APP Timer</string>

</resources>