<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFFF9800"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BFFF9800"
        tools:context=".LoginActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/days_one"
            android:shadowColor="@color/black"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/days_one"
            android:shadowColor="@color/black"
            android:text="@string/create_your_account_or_log_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/loginpageicon"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="115dp"
            android:contentDescription="@string/userimage" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:background="@null"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="10dp"
            tools:targetApi="lollipop">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:background="@null"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="26dp"
                    android:alpha="0.5"
                    app:cardCornerRadius="12dp">

                    <EditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:textIsSelectable="true"
                        android:fontFamily="@font/days_one"
                        android:padding="8dp"
                        android:hint="@string/enter_username"
                        android:autofillHints="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="365dp"
                    android:alpha="0.5"
                    android:elevation="8dp"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="26dp"
                    app:cardCornerRadius="12dp">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="@android:color/transparent"
                        android:textAlignment="textStart"
                        android:textIsSelectable="true"
                        android:padding="8dp"
                        android:fontFamily="@font/days_one"
                        android:inputType="textPassword"
                        android:hint="@string/enter_password"
                        android:autofillHints="true"
                        android:gravity="start" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="end"
                    android:textColor="#090CB6"
                    android:layout_marginRight="20dp" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="26dp"
                    android:elevation="12dp"
                    android:shadowColor="@color/black"
                    android:backgroundTint="#9CDC8539"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:fontFamily="@font/days_one"
                    android:text="@string/log_in" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/or"
                    android:fontFamily="@font/days_one"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/googleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:alpha="0.8"
                    android:background="#FFC107"
                    android:backgroundTint="#F2F2F2"
                    app:cardCornerRadius="12dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="22dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:layout_marginStart="48dp"
                            android:src="@drawable/googleicon"
                            android:contentDescription="@string/google_logo"
                            android:layout_marginLeft="48dp" />

                        <TextView
                            android:id="@+id/googleSignInBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:layout_marginStart="18dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/days_one"
                            android:text="@string/log_in_with_google"
                            android:layout_marginLeft="18dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/signupView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:alpha="0.8"
                    android:background="#FFC107"
                    app:cardCornerRadius="12dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="26dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/NoAccountTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textAllCaps="false"
                            android:layout_marginStart="18dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/days_one"
                            android:text="@string/don_t_have_an_account"
                            android:layout_marginLeft="18dp" />

                        <TextView
                            android:id="@+id/SignUpTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up"
                            android:clickable="true"
                            android:textSize="16sp"
                            android:focusable="true"
                            android:fontFamily="@font/days_one"
                            android:background="?attr/selectableItemBackground"
                            android:layout_marginStart="18dp"
                            android:layout_gravity="center"
                            android:textColor="#090CB6"
                            android:layout_marginLeft="18dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>

